k8s/httproutes.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: global-gateway-echo-server
spec:
  parentRefs:
    - kind: Gateway
      name: global-gateway
  hostnames:
    - "example.com"
  rules:
    # Catch-all rule for domain-based routing
    - matches:
      backendRefs:
        - name: service-echo-server
          port: 8080
